# template-builder

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  pyproject.toml  render.yaml
examples/: answers_halloway.json  context-demo-v2.json  context-demo-v2.json.journal.jsonl  context-demo-v2.json.report.md  context-demo.json  context-demo.json.report.md  halloway_nda.docx  halloway_nda.md  halloway_round1_returned.txt  halloway_round2_returned.txt  nda_template.json  nda_template.json.journal.jsonl  nda_template.json.report.md  termsheet_example.txt
examples/contracts/: nda_03.txt  nda_04.txt  nda_05.txt  nda_06.txt  nda_07.txt  nda_08.txt  nda_09.txt  nda_11.txt  nda_12.txt
examples/matters/: nda-halloway-2026.json  nda_template-beacon-analytics-pty-ltd-2026-07-10.json
examples/skills/confidentiality-agreement/: SKILL.md
examples/sources/context-demo/: nda_01.txt  nda_02.txt  (+1 more)
template_builder/: __init__.py  approve.py  cli.py  conditions.py  decompile.py  drift.py  edit.py  exceptions.py  fsio.py  ingest.py  intake.py  journal.py  llm.py  matter.py  merge.py  model.py  negotiate.py  ops.py  render.py  replay.py  report.py  richtext.py  roundtrip.py  server.py  skill.py  validate.py
template_builder/static/: index.html  intake.html
tests/: conftest.py  test_conditions.py  test_core.py  test_dependencies.py  test_edit_cli.py  test_generator.py  test_intake.py  test_learning.py  test_matters.py  test_production.py  test_readonly.py  test_render.py  test_review_fixes.py  test_review_round3.py  test_richtext.py  test_server.py  test_validate.py
