[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "template-builder"
version = "0.1.0"
description = "Build deterministic, sign-off-able contract templates from a corpus of precedent contracts."
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.69",
    "isaacus>=0.21",
    "pydantic>=2.12",
    "python-docx>=1.1",
    "pypdf>=4.0",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "httpx>=0.27"]

[project.scripts]
tb = "template_builder.cli:main"

[tool.setuptools.packages.find]
include = ["template_builder*"]

[tool.setuptools.package-data]
template_builder = ["static/*"]
